--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "node deploy.js"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "vercel":"^23.1.2"
+    "vercel": "^23.1.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
